# rr_common_plugins

./: CMakeLists.txt  README.md  package.xml  plugins.xml
include/: CMakeLists.txt
include/rr_common_plugins/: action_lifecycle_plugin_base.hpp  imu_action_serial_plugin.hpp  imu_service_serial_plugin.hpp  joy_subscriber_udp_plugin.hpp  rr_buffer_factory_simple.hpp.in  rr_common_plugin.hpp  rr_common_plugins.hpp  rr_common_subscribers.hpp  rr_state_maintainer_impl.hpp  rr_subscriber_gps_impl.hpp  rr_subscriber_impl.hpp.in  visibility_control.h
src/: action_lifecycle_plugin_base.cpp  imu_action_serial_plugin.cpp  imu_service_serial_plugin.cpp  joy_subscriber_udp_plugin.cpp  rr_buffer_factory_simple.cpp  rr_common_plugin.cpp  rr_state_maintainer_impl.cpp  rr_subscriber_batt_state_impl.cpp  rr_subscriber_common_impl.cpp  rr_subscriber_gps_impl.cpp  rr_subscriber_image_impl.cpp  rr_subscriber_joy_impl.cpp
src/debug/: imu_action_serial_debug_node.cpp
test/: CMakeLists.txt  imu_action_serial_plugin_test.cpp  imu_service_serial_plugin_test.cpp  joy_subscriber_udp_plugin_test.cpp  rr_common_subscribers_test.cpp  rr_state_maintainer_test.cpp
